# 0xegg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  READMe.md
.github/workflows/: cmake.yml
0xegg/: 0xegg.cpp  0xegg.filters  0xegg.vcxproj  Action.h  Egg.h  GuiApp.h  GuiStyle.h  Humanizer.h  IconTexture.h  InputDevice.h  InputRecorder.h  Logger.h  MacroLoader.h  WindowsInput.h  egg.rc  gui_main.cpp
examples/: hello.json
macros/: recorded.json
